--- a/users/templates/harsha_templates/search_extension.html
+++ b/users/templates/harsha_templates/search_extension.html
@@ -71,7 +71,7 @@
               					<label for="#">Check Out</label>
               					<div class="form-field">
 	              					<div class="icon"><span class="icon-map-marker"></span></div>
-					                <input type="text" disabled="disabled" name="date_end" id="date-end" class="form-control checkout_date" placeholder="From">
+					                <input disabled type="text" name="date_end" id="date-end" class="form-control checkout_date" placeholder="From" style="cursor: not-allowed;">
 					              </div>
 				              </div>
               			</div>
@@ -79,19 +79,19 @@
               				<div class="form-group">
               					<label for="#">Adults</label>
               					<div class="form-field">
-	              					<div class="select-wrap">
-			                      <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-			                      <select name="" id="flights-num-travs" class="form-control">
-			                      	<option value="">1</option>
-			                        <option value="">2</option>
-			                        <option value="">3</option>
-			                        <option value="">4</option>
-			                        <option value="">5</option>
-			                      </select>
-			                    </div>
-					              </div>
-				              </div>
-						  </div>
+	              					<div class="select-wrap" >
+									  <div class="icon"><span class="ion-ios-arrow-down"></span></div>
+									  <select name="num_travs" id="flights-num-travs" class="form-control">
+										<option value="1">1</option>
+										<option value="2">2</option>
+										<option value="3">3</option>
+										<option value="4">4</option>
+										<option value="5">5</option>
+									  </select>
+									</div>
+								</div>
+							</div>
+						</div>
 						<div class="col-md align-items-end">
 							<div class="form-group">
 								<label for="#">Children</label>
@@ -99,7 +99,7 @@
 									<div class="select-wrap">
 								<div class="icon"><span class="ion-ios-arrow-down"></span></div>
 								<select name="" id="flights-num-child-travs" class="form-control">
-									<option value="">1</option>
+								  <option value="">1</option>
 								  <option value="">2</option>
 								  <option value="">3</option>
 								  <option value="">4</option>
