--- a/users/templates/harsha_templates/places.html
+++ b/users/templates/harsha_templates/places.html
@@ -69,7 +69,7 @@
 	  <section class="ftco-section">
       <div class="container">
         <div class="row">
-			<!--
+
         	<div class="col-lg-3 sidebar order-md-last ftco-animate">
         		<div class="sidebar-wrap ftco-animate">
         			<h3 class="heading mb-4">Find City</h3>
@@ -114,7 +114,7 @@
 	            </form>
         		</div>
 
-          </div>  --> <!-- END-->
+          </div>  <!-- END-->
           <div class="col-lg-9">
 			<!--
           	<div class="row">
