--- a/users/templates/harsha_templates/search_extension.html
+++ b/users/templates/harsha_templates/search_extension.html
@@ -92,23 +92,26 @@
 								</div>
 							</div>
 						</div>
+
 						<div class="col-md align-items-end">
-							<div class="form-group">
-								<label for="#">Children</label>
-								<div class="form-field">
-									<div class="select-wrap">
-								<div class="icon"><span class="ion-ios-arrow-down"></span></div>
-								<select name="" id="flights-num-child-travs" class="form-control">
-								  <option value="">1</option>
-								  <option value="">2</option>
-								  <option value="">3</option>
-								  <option value="">4</option>
-								  <option value="">5</option>
-								</select>
-							  </div>
+              				<div class="form-group">
+              					<label for="#">Children</label>
+              					<div class="form-field">
+	              					<div class="select-wrap" >
+									  <div class="icon"><span class="ion-ios-arrow-down"></span></div>
+									  <select name="num_child" id="flights-num-child-travs" class="form-control">
+										<option value="1">1</option>
+										<option value="2">2</option>
+										<option value="3">3</option>
+										<option value="4">4</option>
+										<option value="5">5</option>
+									  </select>
+									</div>
 								</div>
 							</div>
 						</div>
+
+
               			<div class="col-md align-items-end mt-1">
               				<div class="form-group">
 								<label for="#"> </label>
